# research.inc

./: .cursorrules  .gitignore  README.md  export_env_simple.sh  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: README.md  pyproject.toml  requirements.txt  run.py
backend/app/: agent.py  db.py  main.py  models.py  stream_handler.py  thread_manager.py
backend/docs/: anthropic_setup.md  events.txt
backend/test/: test_integration_generate_streaming_response.py  test_integration_send_event.py  test_stream_handler.py
convex/: schema.ts
prisma/: schema.prisma
src/: middleware.ts
src/app/: globals.css  layout.tsx  page-client.tsx  page.tsx
src/app/agent/: page-client.tsx  page.tsx
src/app/login/: page.tsx
src/app/table/: page-client.tsx  page.tsx
src/components/: Chat.tsx  Editor.tsx  data-table.tsx
src/components/animation/: Aurora.tsx  Glitch.tsx  GradientText.tsx  Waves.tsx
src/components/chat/: Chat.tsx  ChatInput.tsx  MessageItem.tsx  MessageList.tsx  ModelSelector.tsx  PromptInput.tsx  WelcomeMessage.tsx
src/components/document/: document-card.tsx  document-grid.tsx  document-section.tsx  new-document-card.tsx
src/components/editor/: Editor.tsx  EditorContent.tsx  EditorToolbar.tsx
src/components/providers/: ToasterProvider.tsx  WebSocketProvider.tsx
src/components/ui/: button.tsx  (+1 more)
src/constants/: models.ts
src/contexts/: WebSocketContext.tsx
src/hooks/: use-toast.ts  useWebSocket.ts
src/lib/: auth.ts
src/mastra/: index.ts
src/store/: chat-store.ts  editor-store.ts
src/types/: chat.ts  document.ts
(+20 files in other folders)
